# open_ai

./: .gitignore  .sesskey  09_aula.ipynb  11_e_12_aula.ipynb  15_aula_atualizada.ipynb  16_aula.ipynb  analisador_pedido.ipynb  app copy.py  app.py  aula05.py  huface_aula01.py  huface_ocr.py  note.ipynb  nova_imagem  pdf_converter.py  pyproject.toml  run.ipynb  run.py  run01.py  runui.py  tl_bot.py  whats_api.py
api/chatgpt/: client.py  get_columns_names.py  get_itens_data.py
arquivos/: formato.json
core/handlers/: pdf_file_handler.py
core/models/: columns.py  files.py
curso/: 08_aula.ipynb  13_aula.ipynb  14_aula_atualizada.ipynb  20_aula.py  exemplo_async.py  fast_html.py  huface_api.py  pandas_aula_01.ipynb  whats_api.py
curso/Pandas/Conceitos/: 2-series.ipynb
examples/: chatgpt_assistant.py
presentation/: main.py
view/: main.py
